Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-6612

Git: Double-clicking untracked file on commit editor doesn't open diff

    XMLWordPrintable

Details

    • ca5d52fee920e24c8b677c78e075df45a5d8c2ed

    Description

      Create a new file without adding it to Git, try to commit.

      The file is displayed as 'untracked', but if you double-click on it, it doesn't open a diff.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            orgads Orgad Shaneh
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes