Git: Open untracked files on double-click

Task-number: QTCREATORBUG-6612
Change-Id: Ic56f4cd20063c9d4d05316607636aa3df1d1a5a3
Reviewed-by: André Hartmann <aha_1980@gmx.de>
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>